# openclaw-deploy

./: .gitignore  .sops.yaml  .tflint.hcl  CHANGELOG.md  CLAUDE.md  Makefile  Makefile.local.example  README.md  SECURITY.md  SECURITY_AUDIT.md  docker-compose.override.example.yml  docker-compose.yml  go.mod  hugo.toml  mkdocs.yml  openclaw.example.json  pyproject.toml  renovate.json
.claude/hooks/: post-edit-validate.sh
.githooks/: pre-commit
.github/workflows/: deploy.example.yml  deploy.yml.example  docker-build.yml  pages.yml  release.yml  rollback.example.yml  rollback.yml.example  terraform-apply.example.yml  terraform-apply.yml  terraform-plan.yml  validate.yml
ansible/: ansible.cfg  site.local.example.yml  site.yml
ansible/plays/: addons.yml  backup.yml  bootstrap.yml  config.yml  docker.yml  monitor.yml  restore.yml  setup_auth.yml  start.yml  tailscale.yml
ansible/templates/: tailscale-serve.json.j2
config/: exec-approvals.json
docker/: Dockerfile  entrypoint.sh  install-optional.sh  skills-manifest.txt
docker/workspace-templates/: .gitignore
docs/: _index.md  agents.md  changelog.md  cicd.md  gitops-auto-deploy.md  headless-browser.md  index.md  lossless-claw.md  openclaw-config.md  remote-state.md  roadmap.md  secrets.md  security-hardening.md  security.md  skills.md  tailscale.md  versions.md  workspace-git-sync.md
docs/addons/: _index.md  acp-claude-code.md  (+1 more)
scripts/: backup.sh  doctor.sh  install-sops.sh  monitor.sh  setup-workspace-repos.sh  setup.sh  status.sh  validate.sh  workspace-sync.sh
secrets/: .env.example  inputs.example.sh
(+39 files in other folders)
