[project]
name = "openclaw-deploy"
version = "0.8.1"

[tool.semantic_release]
major_on_zero = false
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = ""
commit_message = "chore(release): {version}"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
